--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!--
+File:           index.html
+Class:          COMP 4610 GUI Programming I
+Assignment:     HW3, "Creating an Interactive Dynamic Table"
+Name:           Nathan Khoury
+Created:        10/22/2025
+Last Modified:  10/27/2025
+
+A single-page interactive activity that allows the user to specify lower and upper bounds
+of both axes of a multiplication table, and then generates the described table in a sufficiently
+aesthetically pleasing manner. Unexpected/unacceptable user interaction is handled with a
+temporary text box to inform the user of the problem and direct them to a solution.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
