change: file structure
refactor the file structure to adhere with a more standard structure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ temporary text box to inform the user of the problem and direct them to a soluti
   <head>
     <meta charset="utf-8">
     <title>Dynamic Multiplication Table</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- user inputs for table -->
@@ -51,6 +51,6 @@ temporary text box to inform the user of the problem and direct them to a soluti
       </table>
     </div>
     <!-- JS code for generating table -->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
